@@ -11,6 +11,8 @@ http://svn.edgewall.org/repos/genshi/tags/0.5.2/
 
  * Fix problem with I18n filter that would get confused by expressions in
    attribute values when inside an `i18n:msg` block (ticket #250).
+ * Fix problem with the transformation filter dropping events after the
+   selection (ticket #290).
 
 
 Version 0.5.1
